Add button files

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   <body>
     <header class="navbar">
       <h1 class="navbar__header">CHECK <span>YO'</span> SELF</h1>
-<!--         <button class="navbar__button" type="button" src=""/> -->
-      <input class = "navbar__input" type="text" name="search" placeholder="Search"/>  
+        <img class="navbar__button" type="button" src="check-yo-self-icons/search.svg"/>
+      <input class="navbar__input" type="text" name="search" placeholder="Search"/>  
     </header>
     <main class="container">
       <aside class="sidebar">
@@ -28,7 +28,7 @@
         <form class="sidebar__form2">
           <label for="sidebar-form2--label">Task Item</label>
           <input class="sidebar__form2--input" type="text"/>
-          <button class="sidebar__form2--button1" type="button" src=""/>
+          <button class="sidebar__form2--button1" type="button" src="check-yo-self-icons/add_icon.svg"/>
           <button class="sidebar__form2--button2" type="button">Make Task List</button>
           <button class="sidebar__form2--button3" type="button">Clear All</button>
         </form>
