--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <form class="sidebar__form2">
           <label for="sidebar__form2--label">Task Item</label>
           <input class="sidebar__form2--input" type="text"/>
-          <img class="sidebar__form2--image" type="button" src="check-yo-self-icons/add_icon.svg"/>
+          <img class="sidebar__form2--image" src="check-yo-self-icons/symbol-plus.svg"/>
           <button class="sidebar__form2--button2" type="button">Make Task List</button>
           <button class="sidebar__form2--button3" type="button">Clear All</button>
         </form>
