Establish global variabels

--- a/index.html
+++ b/index.html
@@ -18,15 +18,9 @@
         <form class="sidebar__form1">
           <label for="sidebar__form1--label">Task Title</label>
           <input class="sidebar__form1--input" type="text"/>
-  <!--           <article class="sidebar__list">
-            <img class="sidebar__img"/>
-            <p class="sidebar__list--item1 item"></p>
-            <img class="sidebar__img"/>
-            <p class="sidebar__list--item2 item"></p>
-            <img class="sidebar__img"/>
-            <p class="sidebar__list--item3 item"></p>
-          </article> -->
         </form>
+        <ul id="sidebar__list">
+        </ul>
         <form class="sidebar__form2">
           <label for="sidebar__form2--label">Task Item</label>
           <input class="sidebar__form2--input" type="text"/>
